[gd_scene load_steps=6 format=2]

[ext_resource path="res://Hitboxes and Hurtboxes/Hitbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sprites/BlueBullet.png" type="Texture" id=2]
[ext_resource path="res://Projectiles/Projectile.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[sub_resource type="CircleShape2D" id=2]
radius = 4.0

[node name="Projectile" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Hitbox" parent="." instance=ExtResource( 1 )]
input_pickable = false
collision_layer = 1
collision_mask = 15
damage = 1
knockback = 10

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 2 )

[node name="Lifetime" type="Timer" parent="."]
one_shot = true

[node name="NetworkTickRate" type="Timer" parent="."]
wait_time = 0.03
autostart = true

[node name="Tween" type="Tween" parent="."]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="Lifetime" to="." method="_on_Lifetime_timeout"]
[connection signal="timeout" from="NetworkTickRate" to="." method="_on_network_tick"]

[editable path="Hitbox"]
